# pyirk-core

./: .gitignore  .readthedocs.yml  README.md  pyerkconf-default.toml  pyirkconf-default.toml  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: python-app.yml
docs/: .gitignore  README.md  notes.md  requirements.txt
docs/source/: conf.py  index.md
docs/source/background/: entities.md  i18n.md  index.md  literals.md  modules.md  operators.md  qualifiers.md  quantification.md  scopes.md  statements.md
docs/source/devdoc/: overview.md
docs/source/howto/: build_docs.md  generate_test_data.md  index.md  miscellaneous.md  theorem.md  theorem.py
docs/source/intro/: basics.md  example.md  index.md  trains.py
src/pyerk/: __init__.py  ackrep_parser.py  auxiliary.py  builtin_entities.py  consistency_checking.py  core.py  erkloader.py  io.py  rdfstack.py  reportgenerator.py  ruleengine.py  script.py  settings.py  visualization.py
src/pyirk/: __init__.py  auxiliary.py  builtin_entities.py  consistency_checking.py  core.py  io.py  irkloader.py  rdfstack.py  reportgenerator.py  ruleengine.py  script.py  settings.py  utils.py  visualization.py
src/pykerl/: core.py  script.py
tests/: conftest.py  settings.py  test_consistency_check.py  test_core.py  test_rulebased_reasoning.py  test_script.py
tests/test_data/: README.md  erkpackage.toml  irkpackage.toml  knowledge_base1.py  test1.yml  test_triples1.nt  test_zebra_triples1.nt  test_zebra_triples2.nt  test_zebra_triples3.nt  tmod0_with_errors.py  tmod1.py  tmod2_with_new_items.py  tmod3.py  zebra01.py  zebra02.py  zebra_base_data.py  zebra_puzzle_rules.py
(+33 files in other folders)
